# clipp

./: Makefile  README.md  meson.build
include/rf/clipp/: arg.hh  flag.hh  hyperbool.hh  hyperint.hh  hypermap.hh  hyperobject.hh  hyperstring.hh  menu.hh  type.hh  utils.hh
src/: arg.cc  flag.cc  hyperbool.cc  hyperint.cc  hypermap.cc  hyperobject.cc  hyperstring.cc  main.cc  menu.cc  utils.cc
